--- a/product-detail.html
+++ b/product-detail.html
@@ -27,160 +27,199 @@
 
 <body>
     <main>
-        <div class="container">
+        <div class="container mx-auto">
 
             <div class="swiper">
                 <div class="swiper-wrapper">
 
                     <div class="swiper-slide">
-                        <img class="from-slate-200" src="img/Xiaomi-11i-Hypercharge-5G.jpg" alt="404 Not Found">
-                        <div class="p-5 relative left-10 -top-28 font-bold">
-                            <p class="font-normal text-white">Apple Gallery</p>
-                            <h2 class="text-white">Iphone 20 Pro Max</h2>
+                        <img class="from-slate-200" src="img/p1.png" alt="404 Not Found">
+                        <div class="p-5 relative left-10 -top-2 font-bold">
+                            <p class="font-normal ">Apple Gallery</p>
+                            <h2 class="">Iphone 20 Pro Max</h2>
                             <p class="text-[#149777]">TK <span>200,000</span></p>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img class="from-slate-200" src="img/nothing-phone2_.jpg" alt="404 Not Found">
-                        <div class="p-5 relative left-10 -top-28 font-bold">
-                            <p class="font-normal text-white">Apple Gallery</p>
-                            <h2 class="text-white">Iphone 20 Pro Max</h2>
+                        <img class="from-slate-200" src="img/p3.webp" alt="404 Not Found">
+                        <div class="p-5 relative left-10 -top-2 font-bold">
+                            <p class="font-normal ">Apple Gallery</p>
+                            <h2 class="">Iphone 20 Pro Max</h2>
                             <p class="text-[#149777]">TK <span>200,000</span></p>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img class="from-slate-200" src="img/Xiaomi-Redmi-12C.jpg" alt="404 Not Found">
-                        <div class="p-5 relative left-10 -top-28 font-bold">
-                            <p class="font-normal text-white">Apple Gallery</p>
-                            <h2 class="text-white">Iphone 20 Pro Max</h2>
+                        <img class="from-slate-200" src="img/p4.png" alt="404 Not Found">
+                        <div class="p-5 relative left-10 -top-2 font-bold">
+                            <p class="font-normal ">Apple Gallery</p>
+                            <h2 class="">Iphone 20 Pro Max</h2>
                             <p class="text-[#149777]">TK <span>200,000</span></p>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img class="from-slate-200" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt="404 Not Found">
-                        <div class="p-5 relative left-10 -top-28 font-bold">
-                            <p class="font-normal text-white">Apple Gallery</p>
-                            <h2 class="text-white">Iphone 20 Pro Max</h2>
+                        <img class="from-slate-200" src="img/p5.png" alt="404 Not Found">
+                        <div class="p-5 relative left-10 -top-2 font-bold">
+                            <p class="font-normal ">Apple Gallery</p>
+                            <h2 class="">Iphone 20 Pro Max</h2>
                             <p class="text-[#149777]">TK <span>200,000</span></p>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <img class="from-slate-200" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt="404 Not Found">
-                        <div class="p-5 relative left-10 -top-28 font-bold">
-                            <p class="font-normal text-white bg-">Apple Gallery</p>
-                            <h2 class="text-white">Iphone 20 Pro Max</h2>
-                            <p class="text-[#149777]">TK <span>200,000</span></p>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
             </div>
-            <div class="w-10/12 mx-auto">
-                <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Tecno spark go (Used)</h2>
-                      <p>Dhaka</p>
-                      <p>Tk <span>1000</span></p>
-                      <div class="card-actions justify-end">
-                        <p class="text-end">5 min ago</p>
+            <div class="grid gap-4 lg:grid-cols-2 lg:gap-5">
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto">
+                    <div class="card card-side bg-base-100 shadow-xl">
+                        <figure><img class="w-28 h-32" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt=""/></figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Redmi Note 100 + (Used)</h2>
+                          <p>Dhaka</p>
+                          <p>Tk <span>1000</span></p>
+                          <div class="card-actions justify-end">
+                            <p class="text-end">15 min ago</p>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="w-10/12 mx-auto">
-                <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Tecno spark go (Used)</h2>
-                      <p>Dhaka</p>
-                      <p>Tk <span>1000</span></p>
-                      <div class="card-actions justify-end">
-                        <p class="text-end">5 min ago</p>
+                </div>
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto">
+                    <div class="card card-side bg-base-100 shadow-xl">
+                        <figure><img class="w-28 h-32" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt=""/></figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Redmi Note 100 + (Used)</h2>
+                          <p>Dhaka</p>
+                          <p>Tk <span>1000</span></p>
+                          <div class="card-actions justify-end">
+                            <p class="text-end">20 min ago</p>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="w-10/12 mx-auto">
-                <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Tecno spark go (Used)</h2>
-                      <p>Dhaka</p>
-                      <p>Tk <span>1000</span></p>
-                      <div class="card-actions justify-end">
-                        <p class="text-end">5 min ago</p>
+                </div>
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto">
+                    <div class="card card-side bg-base-100 shadow-xl">
+                        <figure><img class="w-28 h-32" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt=""/></figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Redmi Note 100 + (Used)</h2>
+                          <p>Dhaka</p>
+                          <p>Tk <span>1000</span></p>
+                          <div class="card-actions justify-end">
+                            <p class="text-end">25 min ago</p>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="w-10/12 mx-auto">
-                <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Tecno spark go (Used)</h2>
-                      <p>Dhaka</p>
-                      <p>Tk <span>1000</span></p>
-                      <div class="card-actions justify-end">
-                        <p class="text-end">5 min ago</p>
+                </div>
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto">
+                    <div class="card card-side bg-base-100 shadow-xl">
+                        <figure><img class="w-28 h-32" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt=""/></figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Redmi Note 100 + (Used)</h2>
+                          <p>Dhaka</p>
+                          <p>Tk <span>1000</span></p>
+                          <div class="card-actions justify-end">
+                            <p class="text-end">30 min ago</p>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="w-10/12 mx-auto">
-                <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Tecno spark go (Used)</h2>
-                      <p>Dhaka</p>
-                      <p>Tk <span>1000</span></p>
-                      <div class="card-actions justify-end">
-                        <p class="text-end">5 min ago</p>
+                </div>
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto">
+                    <div class="card card-side bg-base-100 shadow-xl">
+                        <figure><img class="w-28 h-32" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt=""/></figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Redmi Note 100 + (Used)</h2>
+                          <p>Dhaka</p>
+                          <p>Tk <span>1000</span></p>
+                          <div class="card-actions justify-end">
+                            <p class="text-end">35 min ago</p>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="w-10/12 mx-auto">
-                <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Tecno spark go (Used)</h2>
-                      <p>Dhaka</p>
-                      <p>Tk <span>1000</span></p>
-                      <div class="card-actions justify-end">
-                        <p class="text-end">5 min ago</p>
+                </div>
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto">
+                    <div class="card card-side bg-base-100 shadow-xl">
+                        <figure><img class="w-28 h-32" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt=""/></figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Redmi Note 100 + (Used)</h2>
+                          <p>Dhaka</p>
+                          <p>Tk <span>1000</span></p>
+                          <div class="card-actions justify-end">
+                            <p class="text-end">40 min ago</p>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="w-10/12 mx-auto">
-                <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Tecno spark go (Used)</h2>
-                      <p>Dhaka</p>
-                      <p>Tk <span>1000</span></p>
-                      <div class="card-actions justify-end">
-                        <p class="text-end">5 min ago</p>
+                </div>
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto">
+                    <div class="card card-side bg-base-100 shadow-xl">
+                        <figure><img class="w-28 h-32" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt=""/></figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Redmi Note 100 + (Used)</h2>
+                          <p>Dhaka</p>
+                          <p>Tk <span>1000</span></p>
+                          <div class="card-actions justify-end">
+                            <p class="text-end">45 min ago</p>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="w-10/12 mx-auto">
-                <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Tecno spark go (Used)</h2>
-                      <p>Dhaka</p>
-                      <p>Tk <span>1000</span></p>
-                      <div class="card-actions justify-end">
-                        <p class="text-end">5 min ago</p>
+                </div>
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto">
+                    <div class="card card-side bg-base-100 shadow-xl">
+                        <figure><img class="w-28 h-32" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt=""/></figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Redmi Note 100 + (Used)</h2>
+                          <p>Dhaka</p>
+                          <p>Tk <span>1000</span></p>
+                          <div class="card-actions justify-end">
+                            <p class="text-end">50 min ago</p>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                  </div>
+                </div>
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto">
+                    <div class="card card-side bg-base-100 shadow-xl">
+                        <figure><img class="w-28 h-32" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt=""/></figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Redmi Note 100 + (Used)</h2>
+                          <p>Dhaka</p>
+                          <p>Tk <span>1000</span></p>
+                          <div class="card-actions justify-end">
+                            <p class="text-end">55 min ago</p>
+                          </div>
+                        </div>
+                      </div>
+                </div>
             </div>
+            <section>
+                <div class="w-10/12 lg:w-full lg:p-3 mx-auto mt-10">
+                    <div class="collapse collapse-arrow">
+                        <input type="radio" name="my-accordion-2"/> 
+                        <div class="collapse-title text-xl font-medium">
+                          Mobile, Accessories & service
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Test 1</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow">
+                        <input type="radio" name="my-accordion-2" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          Mobile Phones by Location
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Test 2</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow">
+                        <input type="radio" name="my-accordion-2" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          Mobile Phones by Brand
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Test 3</p>
+                        </div>
+                      </div>
+                </div>
+            </section>
         </div>
     </main>
     <footer>
