--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <h4 class=" font-bold">Browse items by category</h4>
                     <button class="text-red-400">See All</button>
                 </div>
-                <div class="grid grid-cols-4 justify-items-center pt-10 w-11/12 mx-auto mb-4">
+                <div class="grid grid-cols-4 justify-items-center pt-10 w-11/12 mx-auto mb-4 gap-4">
                     <a class="flex flex-col items-center" href="product-detail.html">
                         <i class="fa-solid fa-car font-medium text-5xl text-[#149777]"></i>
                         <h2 class="text-center font-bold">Vehicle</h2>
